--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "bashtag",
+  "productName": "GC EDL Parser",
   "version": "1.0.0",
   "description": "Run bash scripts in Electron",
   "main": "main.js",
   "build": {
+    "AppId": "com.electron.${name}",
+    "category": "public.app-category.utilities",
     "target": "pkg"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron .",
-    "build": "electron-packager ./ --arch=x64 --platform=darwin --out build --overwrite"
+    "build": "electron-packager ./ --arch=x64 --platform=darwin --icon myIcon --out build --overwrite"
   },
   "keywords": [
     "bash",
@@ -22,8 +25,9 @@
     "electron-packager": "^9.0.0"
   },
   "dependencies": {
+    "bootstrap": "^4.1.0",
     "jquery": "^3.2.1",
-    "node-schedule": "^1.2.5",
-    "watchr": "^3.0.1"
+    "photonkit": "^0.1.2",
+    "popper.js": "^1.14.3"
   }
 }
